--- a/src/style.css
+++ b/src/style.css
@@ -13,12 +13,17 @@ font-family: 'Inter', sans-serif;
     --white: #F1F1F1;
     --grey: #D1D1D1;
     --one: #4373ED;
+    --two: #e63030;
 }
 
 body {
     background-color: var(--black);
     color: var(--white);
     font-family: 'Inter', sans-serif;
+
+    background-image: radial-gradient(circle, var(--black), #252525);
+    animation: gradient 15s linear infinite;
+    background-size: 200% 200%;
 }
 
 p {
@@ -33,4 +38,12 @@ a {
     text-decoration: none;
     color: var(--white);
     transition: all .3s;
+}
+
+ul {
+    list-style: none;
+}
+
+.overflow {
+    overflow: hidden;
 }
