--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -7,7 +7,7 @@ footer {
     border-top: 1px solid var(--grey);
     padding: 2rem 0;
     margin-top: 5rem;
-    padding: 1.4rem 1rem;
+    padding: 1rem 1rem;
     text-align: center;
 }
 
@@ -15,6 +15,7 @@ footer ul {
     display: flex;
     align-items: center;
     gap: 2rem;
+    margin-block: 1rem;
 }
 
 footer ul li {
