--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,6 +6,7 @@ footer {
     max-width: 1500px;
     border-top: 1px solid var(--grey);
     padding: 2rem 0;
+    margin: 0 auto;
     margin-top: 5rem;
     padding: 1rem 1rem;
     text-align: center;
