--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -48,6 +48,17 @@ header ul a:hover::after {
     display: none;
 }
 
+.btn-bell {
+    color: var(--black);
+    background-color: transparent;
+    padding: 5px;
+    border: none;
+    transition: all .3s;
+}
+
+.btn-bell:hover {
+    color: var(--one);
+}
 
 
 @media (max-width: 768px) {
@@ -65,6 +76,10 @@ header ul a:hover::after {
         background-color: var(--white);
         border-radius: 20px;
         padding: 1rem 1.5rem;
+        width: 90%;
+
+        display: flex;
+        flex-direction: column;
         transition: all .5s;
     }
 
